--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/gradient"
-    tools:context=".LoginActivity">
+    tools:context=".sign_up">
 
     <!-- Login progress -->
     <ProgressBar
@@ -74,13 +74,53 @@
                     android:autofillHints="" />
 
             </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/con_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_con_password"
+                    android:imeActionId="6"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:autofillHints="" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/number"
+                    android:imeActionId="6"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:maxLength="11"
+                    android:singleLine="true"
+                    android:autofillHints="" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/email_sign_up_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
+                android:text="@string/action_sign_up"
                 android:textStyle="bold"
                 android:background="@color/colorPrimary"
                 android:textColor="@color/signInBtn"/>
@@ -95,14 +135,14 @@
                     android:id="@+id/no_account_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/no_account"/>
+                    android:text="@string/account" />
 
                 <TextView
-                    android:id="@+id/sign_up_btn"
+                    android:id="@+id/sign_in_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/action_sign_up"
-                    android:onClick="sign_up"
+                    android:text="@string/action_sign_in"
+                    android:onClick="sign_in"
                     android:layout_alignParentRight="true"
                     android:textStyle="bold"
                     android:textColor="#404040"
@@ -110,6 +150,7 @@
                     android:layout_alignParentEnd="true" />
 
             </RelativeLayout>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
